--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.3",
-    "date-fns": "^3.0.6",
+    "axios": "^1.6.5",
+    "date-fns": "^3.2.0",
+    "highlight.js": "^11.9.0",
+    "markdown-to-jsx": "^7.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.3.3",
-    "vite": "^5.0.9"
+    "vite": "^5.0.11"
   }
 }
